fixed user profile scrollbar

--- a/src/Components/ReactScrollbar/style.sass
+++ b/src/Components/ReactScrollbar/style.sass
@@ -6,6 +6,10 @@
   max-width: 640px
   margin: 0 auto
   position: relative
+  +r(lg)
+    max-width: 480px
+  +r(xs)
+    max-width: 460px
 
 .menu-item
   user-select: none
